--- a/src/pages/profile/profile.css
+++ b/src/pages/profile/profile.css
@@ -1,8 +1,9 @@
 .bio {
     position: inherit;
-    width: 30%;
+    width: auto;
     padding: 1rem;
-    background-color: #f5f5f5;
+    background-color: var(--bg-color);
+    color:var(--background);
     display: flex;
     flex-direction: column;
     gap: 1rem;
@@ -16,7 +17,7 @@
 }
 
 .prof-summary div span {
-    background-color: var(--secondary-color);
+    background-color: var(--bg-color);
     border-radius: 50%;
     width: 1.8rem;
     height: 1.8rem;
@@ -25,12 +26,13 @@
     justify-content: center;
     color: #f5f5f5;
     font-size: 85%;
-}
+  }
 
 .save {
     position: relative;
     width: 5rem;
-    background-color: var(--secondary-color);
+    background-color: var(----primary-color);
     border: solid 1px var(--secondary-color);
     color: #fff;
+    cursor: pointer;
 }
